# vmp

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  build.ps1  install.ps1  uninstall.ps1
.github/: SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  clang-tidy.yml
cmake/: CompilerWarnings.cmake  DependencySolver.cmake  DownloadCPM.cmake  ProjectOptions.cmake  StaticAnalyzers.cmake
config/: CMakeLists.txt  cmake.hh
dependencies/miniaudio/: CMakeLists.txt
headers/: audio.h  console.hh  player.hh  queue.hh  song.hh  ui.hh  util.hh
scripts/: build.ps1  configure-force-clang-tidy.ps1  configure-force-clang-tidy.sh  configure.ps1  configure.sh
src/: CMakeLists.txt  main.cc  mp3file.cc  mp3file.h  queue.cc  queue.h  ui.cc  ui.h  util.cc  util.h  vmp.cc
src/audio/: audio.c
src/console/: common.cc  console.cc  unix.cc  win32.cc  windows.cc
src/player/: helpers.cc  interactions.cc  manager.cc  player.cc  queue.cc  song.cc
src/queue/: queue.cc
src/song/: song.cc
src/ui/: actions.cc  available.cc  borders.cc  buttons.cc  callbacks.cc  helpers.cc  info.cc  keys.cc  main_list.cc  queues.cc  status.cc  ui.cc  unsorted.cc  zones.cc
src/util/: args.cc
